examples/test/testpolicy2638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2638
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key19: value10
      key22: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value13
          key40: value12
          key33: value24
      podSelector:
        matchLabels:
          key43: value8
          key20: value37
          key17: value36
